Fix cart overflow (Firefox)

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -518,3 +518,9 @@ h1 {
     }
   }
 }
+
+// fix cart overflow
+.snipcart-cart-summary-side .snipcart-cart__content .snipcart-item-list {
+  /* overflow: overlay; */
+  overflow: auto;
+}
